Feat: ブースの応答に混雑度の更新時刻を追加した
